--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Welcome to Information Retriveal exercise!
+    Royal Lib search mirror
   </h1>
 </div>
 <div>
