annotation check added

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,30 +1,35 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div class="container">
-<div style="text-align:center">
+  <div style="text-align:center">
 
-  <h1>
-    Royal Lib search mirror
-  </h1>
-</div>
+    <h1>
+      Royal Lib search mirror
+    </h1>
+  </div>
 
   <div class="row">
     <div class="col-12">
       <div class="input-group mb-3">
 
-        <input  type="text" class="form-control" [(ngModel)]="query" placeholder="Type your query here">
+        <input type="text" class="form-control" [(ngModel)]="query" placeholder="Type your query here">
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary" type="button"  (click)="getData()" >Search</button>
-        </div>
-    </div>
-    <div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <div class="input-group-text">
-          <input type="checkbox" [(ngModel)]="author_check">
+
+          <span class="input-group-text">Use annotations</span>
+          <div class="input-group-text">
+            <input type="checkbox" [(ngModel)]="annotation_check">
+          </div>
+          <button class="btn btn-outline-secondary" type="button" (click)="getData()">Search</button>
         </div>
       </div>
-      <input [(ngModel)]="author_query" type="text" class="form-control" placeholder="Search by author">
-    </div>
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <div class="input-group-text">
+            <input type="checkbox" [(ngModel)]="author_check">
+          </div>
+        </div>
+        <input [(ngModel)]="author_query" type="text" class="form-control" placeholder="Search by author">
+      </div>
     </div>
 
   </div>
@@ -32,7 +37,7 @@
   <div *ngIf="searching"> Wait please, search may take a moment...</div>
 
   <div *ngIf="results_ready">
-    <div *ngFor="let r of results" >
+    <div *ngFor="let r of results">
       <app-sresult class="row" [sresult]="r"></app-sresult>
     </div>
   </div>
