--- a/webapp/src/app/sresult/sresult.component.html
+++ b/webapp/src/app/sresult/sresult.component.html
@@ -4,5 +4,10 @@
     <h4 class="alert-heading" title="Score : {{sresult._score}}">{{sresult._source.title}} </h4>
     <h5> {{sresult._source.genre}} От {{sresult._source.author}}, <i>{{sresult._source.year}}</i></h5>
     <p>{{sresult._source.annotation}}</p>
+    <button class="btn btn-outline-secondary" type="button" (click)="getNER()">Show main characters</button>
+    <p *ngIf="ner_searching">Waiting for characters...</p>
+    <p *ngIf="ner_ready && ! ner_fail">{{ner}}</p>
+    <p *ngIf="ner_fail">Sorry, seems like characters are not avaliable</p>
+
   </div>
 </div>
